--- a/human_detection_model.ipynb
+++ b/human_detection_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "91589b87-3adf-4be4-8dd5-96cee3874d54",
    "metadata": {},
    "outputs": [
@@ -13,17 +13,14 @@
       "Using cache found in C:\\Users\\Phuong Hoang Dinh/.cache\\torch\\hub\\ultralytics_yolov5_master\n",
       "YOLOv5  2025-6-5 Python-3.11.11 torch-2.7.0+cu118 CUDA:0 (NVIDIA GeForce RTX 2070 SUPER, 8192MiB)\n",
       "\n",
-      "Downloading https://github.com/ultralytics/yolov5/releases/download/v7.0/yolov5s.pt to yolov5s.pt...\n",
-      "100%|█████████████████████████████████████████████████████████████████████████████| 14.1M/14.1M [00:00<00:00, 47.1MB/s]\n",
-      "\n",
       "Fusing layers... \n",
       "YOLOv5s summary: 213 layers, 7225885 parameters, 0 gradients, 16.4 GFLOPs\n",
       "Adding AutoShape... \n",
       "C:\\Users\\Phuong Hoang Dinh/.cache\\torch\\hub\\ultralytics_yolov5_master\\models\\common.py:906: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
       "  with amp.autocast(autocast):\n",
-      "image 1/1: 720x1280 2 persons, 1 tie, 1 cell phone\n",
-      "Speed: 1190.7ms pre-process, 104.6ms inference, 325.6ms NMS per image at shape (1, 3, 384, 640)\n",
-      "Saved 1 image to \u001b[1mruns\\detect\\exp\u001b[0m\n"
+      "image 1/1: 1308x736 1 person, 1 backpack, 1 bed, 1 cell phone\n",
+      "Speed: 17.0ms pre-process, 24.0ms inference, 2.0ms NMS per image at shape (1, 3, 640, 384)\n",
+      "Saved 1 image to \u001b[1mruns\\detect\\exp2\u001b[0m\n"
      ]
     },
     {
@@ -59,63 +56,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>745.578735</td>\n",
-       "      <td>48.470276</td>\n",
-       "      <td>1142.694336</td>\n",
-       "      <td>720.000000</td>\n",
-       "      <td>0.868910</td>\n",
+       "      <td>178.964935</td>\n",
+       "      <td>116.669823</td>\n",
+       "      <td>542.894653</td>\n",
+       "      <td>1218.466187</td>\n",
+       "      <td>0.883906</td>\n",
        "      <td>0</td>\n",
        "      <td>person</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>124.744080</td>\n",
-       "      <td>197.334503</td>\n",
-       "      <td>844.397644</td>\n",
-       "      <td>716.650513</td>\n",
-       "      <td>0.630325</td>\n",
-       "      <td>0</td>\n",
-       "      <td>person</td>\n",
+       "      <td>593.541992</td>\n",
+       "      <td>842.006042</td>\n",
+       "      <td>735.867920</td>\n",
+       "      <td>1056.973633</td>\n",
+       "      <td>0.624822</td>\n",
+       "      <td>24</td>\n",
+       "      <td>backpack</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>441.238708</td>\n",
-       "      <td>439.350616</td>\n",
-       "      <td>498.380737</td>\n",
-       "      <td>708.570923</td>\n",
-       "      <td>0.616793</td>\n",
-       "      <td>27</td>\n",
-       "      <td>tie</td>\n",
+       "      <td>378.035583</td>\n",
+       "      <td>158.939316</td>\n",
+       "      <td>435.514008</td>\n",
+       "      <td>244.217514</td>\n",
+       "      <td>0.609037</td>\n",
+       "      <td>67</td>\n",
+       "      <td>cell phone</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>594.081787</td>\n",
-       "      <td>377.300354</td>\n",
-       "      <td>635.423950</td>\n",
-       "      <td>437.147827</td>\n",
-       "      <td>0.274014</td>\n",
-       "      <td>67</td>\n",
-       "      <td>cell phone</td>\n",
+       "      <td>5.283156</td>\n",
+       "      <td>675.424683</td>\n",
+       "      <td>225.372391</td>\n",
+       "      <td>1101.092651</td>\n",
+       "      <td>0.431904</td>\n",
+       "      <td>59</td>\n",
+       "      <td>bed</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         xmin        ymin         xmax        ymax  confidence  class  \\\n",
-       "0  745.578735   48.470276  1142.694336  720.000000    0.868910      0   \n",
-       "1  124.744080  197.334503   844.397644  716.650513    0.630325      0   \n",
-       "2  441.238708  439.350616   498.380737  708.570923    0.616793     27   \n",
-       "3  594.081787  377.300354   635.423950  437.147827    0.274014     67   \n",
+       "         xmin        ymin        xmax         ymax  confidence  class  \\\n",
+       "0  178.964935  116.669823  542.894653  1218.466187    0.883906      0   \n",
+       "1  593.541992  842.006042  735.867920  1056.973633    0.624822     24   \n",
+       "2  378.035583  158.939316  435.514008   244.217514    0.609037     67   \n",
+       "3    5.283156  675.424683  225.372391  1101.092651    0.431904     59   \n",
        "\n",
        "         name  \n",
        "0      person  \n",
-       "1      person  \n",
-       "2         tie  \n",
-       "3  cell phone  "
+       "1    backpack  \n",
+       "2  cell phone  \n",
+       "3         bed  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,8 +124,8 @@
     "model = torch.hub.load('ultralytics/yolov5', 'yolov5s', pretrained=True)\n",
     "\n",
     "# Images\n",
-    "imgs = ['https://ultralytics.com/images/zidane.jpg']  # batch of images\n",
-    "\n",
+    "#imgs = ['https://ultralytics.com/images/zidane.jpg']  # batch of images\n",
+    "imgs = ['0ca501bc0d485e90aad837e1ed6b9b59.jpg']\n",
     "# Inference\n",
     "results = model(imgs)\n",
     "\n",
