Added test dataset

--- a/dataset_generation.ipynb
+++ b/dataset_generation.ipynb
@@ -22,8 +22,8 @@
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "DATA_DIR = './data'\n",
-    "TRANSLATED_DATA_DIR = './data_translated'"
+    "DATA_DIR = 'data'\n",
+    "TRANSLATED_DATA_DIR = 'data_translated'"
    ]
   },
   {
