Moved file to intially evaluate ResNet50_Freeze to another folder representing another experiment: Initial model testing

--- a/initial_model_evaulation/ResNet50_Freeze/Evaluate_ResNet50_Freeze_with_grid_search_and_stratified_k_fold.ipynb
+++ b/initial_model_evaulation/ResNet50_Freeze/Evaluate_ResNet50_Freeze_with_grid_search_and_stratified_k_fold.ipynb
@@ -540,7 +540,9 @@
     "\n",
     "    avg_acc = np.mean(fold_accuracies)\n",
     "    print(f\"Average Accuracy: {avg_acc:.4f}\")\n",
-    "    results.append((config, avg_acc))"
+    "    results.append((config, avg_acc))\n",
+    "    categories.append(str(config))\n",
+    "    accuracies.append(avg_acc)"
    ]
   },
   {
@@ -608,7 +610,7 @@
    "source": [
     "plt.bar(categories, results, width = 0.5)\n",
     "plt.legend()\n",
-    "plt.title(\"Accuracy Per Grid Search\")\n",
+    "plt.title(\"Accuracy Per Grid Search Per 5 K fold/40 epochs\")\n",
     "plt.show()"
    ]
   },
