Finished version 1 of Efficient Net Unfreeze model

--- a/initial_model_evaulation/Original_Model/Evaluate_Original_Model_with_grid_search_and_stratified_k_fold.ipynb
+++ b/initial_model_evaulation/Original_Model/Evaluate_Original_Model_with_grid_search_and_stratified_k_fold.ipynb
@@ -377,7 +377,7 @@
     "        for data, labels in dataloader:\n",
     "            data, labels = data.to(device), labels.to(device)\n",
     "            outputs = model(data)\n",
-    "            preds = outputs.argmax(dim=1)\n",
+    "            preds = outputs.argmax(dim=1) # still work since log softmax is still highest number as the predicted class\n",
     "            correct += (preds == labels).sum().item()\n",
     "            total += labels.size(0)\n",
     "    return correct / total"
